php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #24640 var_export and var_dump can't output large float
Submitted: 2003-07-13 21:25 UTC Modified: 2003-07-17 17:19 UTC
From: gharman at erols dot com Assigned: helly (profile)
Status: Closed Package: Variables related
PHP Version: 4.3.3RC2-dev OS:
Private report: No CVE-ID: None
 [2003-07-13 21:25 UTC] gharman at erols dot com
Description:
------------
Given $v = 1.7e+300, both var_dump and var_export output 0.E+79.  Echo and print_r produce expected result.

Reproduce code:
---------------
<?php
$v = 1.7e+300;
echo var_export($v, true) . '<br />';
var_dump($v);
echo "<br />$v<br />";
print_r($v);
?>

Expected result:
----------------
1.7E+300
float(1.7E+300)
1.7E+300
1.7E+300

Actual result:
--------------
0.E+79
float(0.E+79) 
1.7E+300
1.7E+300 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-07-13 21:49 UTC] sniper@php.net
Marcus, this is again spprintf() that is broken.. :)

 [2003-07-17 17:19 UTC] helly@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 05:00:02 2026 UTC