MFH: Fixed bug #24640 (var_export and var_dump can not output large float). (Marcus)